[package]
name = "kotori"
version = "0.0.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
keywords = []
categories = ["api-bindings"]
repository = "https://github.com/ksk001100/seahorse"
readme = "README.md"
license-file = "MIT"
documentation = "https://docs.rs/kotori/"
description = "Twitter API wrapper written in Rust"

[dependencies]
